using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class TagManager
{

    //TAGS
    public static string PLAYER_TAG = "Player";
    public static string PLAYER_HEALTH_TAG = "PlayerHealth";
 
    public static string FENCE_TAG = "Fence";
  




    //Names

    public static string RIGHT_ARM_TAG = "ArmR1";

    //Animations and triggers

   //Idle, Dead, Melee, Ranged Attack, Run, Jump

    public static string RUN_PARAMETER = "Run";
    public static string RANGED_ATTACK_PARAMETER = "RangedAttack";
    public static string MELEE_ATTACK_PARAMETER = "Melee";
    public static string JUMP_PARAMETER = "Jump";
    
    public static string GET_HURT_PARAMETER = "GetHurt";
    public static string DEAD_PARAMETER = "Dead";

    public static string IDLE_PARAMETER = "Idle";


    public static string RANDOM_PARAMETER = "Random";

    

    //public static string ZOMBIE_MOVE_ANIMATION = "Move"; for enemies

    
}

//Level names

/*
 * 
 * 
 *   //public static string ROCKET_MISSILE_TAG = "RocketMissile";
    //public static string FIRE_BULLET_TAG = "FireBullet";
    //public static string ZOMBIE_HEALTH_TAG = "ZombieHealth"; //changing from Zombie Health to ZombieHealth
    //public static string MELEE_WEAPON_TAG = "MeleeWeapon";
    //public static string COIN_TAG = "Coin";
 * 
 * 
 *    //public static string BACKGROUND_TAG = "Background";
    //public static string BULLET_TAG = "Bullet";
 * 
 * 
 * 
    
    public static string TYPE_WEAPON_PARAMETER = "TypeWeapon";
    public static string SWITCH_PARAMETER = "Switch";


    public static string LEVEL_1_NAME = "Gameplay 1";
    public static string LEVEL_2_NAME = "Gameplay 2";
    public static string LEVEL_3_NAME = "Gameplay 3";
    public static string LEVEL_4_NAME = "Gameplay 4";
    public static string MAIN_MENU_NAME = "MainMenu";


}
//class
*/
